tests/error/overflow.py
print 0xdeadBEEF
print 0127345343457457
print 2874923492463
